<resources>
    <string name="app_name">TP1 - Exercices 5, 6 &amp; 7</string>
    <string name="lastname">Nom : </string>
    <string name="firstname">Prénom : </string>
    <string name="age">Âge : </string>
    <string name="skills_domain">Domaine de compétences : </string>
    <string name="phone_number">Numéro de téléphone : </string>
    <string name="placeholder">Entrez du texte...</string>
    <string name="validate">Valider</string>
    <string name="dialog_message">Êtes-vous sûr(e) de vouloir valider ?</string>
    <string name="confirm">Confirmer</string>
    <string name="cancel">Annuler</string>
    <string name="back">Retour</string>
    <string name="ok">OK</string>
    <string name="end">Vous êtes sur la 3ème activité !</string>
    <string name="call">Appeler</string>
</resources>